experiment_output/error_log/nondex-hmtmcse-com-gradle-boilerplate-project.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1340/wd/NonDex-plugin-test/github.com/hmtmcse-com/gradle-boilerplate-project/src/main/java/com/hmtmcse/tool/Bismillah.java:3: error: package com.hmtmcse.common does not exist
import com.hmtmcse.common.TMConfigHolder;
                         ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1340/wd/NonDex-plugin-test/github.com/hmtmcse-com/gradle-boilerplate-project/src/main/java/com/hmtmcse/tool/Bismillah.java:4: error: package com.hmtmcse.common.util does not exist
import com.hmtmcse.common.util.TMUtil;
                              ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1340/wd/NonDex-plugin-test/github.com/hmtmcse-com/gradle-boilerplate-project/src/main/java/com/hmtmcse/tool/Bismillah.java:10: error: cannot find symbol
        TMConfigHolder.isDebug = true;
        ^
  symbol:   variable TMConfigHolder
  location: class Bismillah
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1340/wd/NonDex-plugin-test/github.com/hmtmcse-com/gradle-boilerplate-project/src/main/java/com/hmtmcse/tool/Bismillah.java:11: error: cannot find symbol
        TMUtil.print("Bismillah");
        ^
  symbol:   variable TMUtil
  location: class Bismillah
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
